@@ -2,15 +2,15 @@ Package: multmod
 Title: Testing of multiple outcomes
 LazyLoad: yes
 LazyData: yes
-Version: 0.6
+Version: 0.7
 Author: Christian B. Pipper <pipper@life.ku.dk>, Christian Ritz
         <ritz@life.ku.dk>
 Maintainer: Christian B. Pipper <pipper@life.ku.dk>
 Description: Testing of multiple outcomes using i.i.d. decompositions
 License: GPL (>= 2)
 Depends: R (>= 2.6.0), gtools, mvtnorm, sandwich, MASS
-Date: 2009-08-31
+Date: 2011-03-17
 URL: http://www.r-project.org
-Packaged: Tue Oct 20 09:07:48 2009; Christian Pipper
+Packaged: 2011-03-17 14:42:21 UTC; Christian Pipper
 Repository: CRAN
-Date/Publication: 2009-10-20 09:33:27
+Date/Publication: 2011-05-23 15:59:11
